--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,3 +1,5 @@
+php_value upload_max_filesize 1G
+php_value post_max_size 1G
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
